Makes the Team Contract Compilable and compiles it.

--- a/docs/contract.tex
+++ b/docs/contract.tex
@@ -1,3 +1,13 @@
+\documentstyle{amsart}
+
+\begin{document}
+
+\author{ [],[],and Will Oursler} %TODO: Add your names...
+\address{ MIT, Cambridge, MA }
+\title{Team Contract}
+\date{\today}
+\maketitle
+
 \section{ Goals }
 As a team we want to get an A grade. We would also like to have a reasonable code base, and ideally one that is easily repurposable for future similar project.
 
@@ -5,5 +15,7 @@ As a team we want to get an A grade. We would also like to have a reasonable cod
 \section{ toyk2a's Goals }
 \section{ woursler's Goals }
 If possible, I think it would be pretty cool if our grammar was loaded from file, but that's a pipe dream.
+
+\end{document}
 
 
