Added sections to latex file

--- a/docs/contract.tex
+++ b/docs/contract.tex
@@ -16,6 +16,11 @@ As a team we want to get an A grade. We would also like to have a reasonable cod
 \section{ woursler's Goals }
 If possible, I think it would be pretty cool if our grammar was loaded from file, but that's a pipe dream.
 
+\section{Meeting Norms}
+We are all free on Monday afternoons and would prefer to meet in the daytime but are open to holding meetings at night.  They will typically be held either in Next House of Simmons dormitory.  
+
+\section{Work Norms}
+
+\section{Decision Making}
+
 \end{document}
-
-
