Make personal goals subsections.

--- a/docs/contract.tex
+++ b/docs/contract.tex
@@ -10,10 +10,10 @@
 \section{ Goals }
 As a team we want to create a well-working project worthy of an A grade. We would also like to have a reasonable code base, and ideally one that is easily repurposable for future similar project.
 
-\section{ czuo's Goals }
+\subsection{ czuo's Goals }
 I hope to use the techniques covered in class and the p-sets so far to help implement a larger-scale project that has good design and runs smoothly.  
-\section{ toyk2a's Goals }
-\section{ woursler's Goals }
+\subsection{ toyk2a's Goals }
+\subsection{ woursler's Goals }
 If possible, I think it would be pretty cool if our grammar was loaded from file, but that's a pipe dream. My goal is to get something functional fast, and then polish it a bit.
 
 \section{Meeting Norms}
