--- a/docs/contract.tex
+++ b/docs/contract.tex
@@ -12,6 +12,7 @@ As a team we want to create a well-working project worthy of an A grade. We woul
 \subsection{ czuo's Goals }
 I hope to use the techniques covered in class and the p-sets so far to help implement a larger-scale project that has good design and runs smoothly.  
 \subsection{ toyk2a's Goals }
+I hope to have an enjoyable, comfortable project working with team members.  
 \subsection{ woursler's Goals }
 If possible, I think it would be pretty cool if our grammar was loaded from file, but that's a pipe dream. My goal is to get something functional fast, and then polish it a bit.
 
@@ -25,9 +26,23 @@ We are all free on Monday afternoons and would prefer to meet in the daytime but
 \\We will record meeting minutes and action lists on Google Docs and share the document with all the team members during the meeting.  
 
 \section{Work Norms}
-
-What will happen if someone does not follow through on a commitment (e.g., missing a deadline, not showing up to meetings)? We kill them. With fire.
-
+We anticipate this project will take approximately 10 hours per week to complete.   
+\newline
+\\Tasks will be divided into reasonable subtasks, which are of approximately equal workload, and each team member will be assigned a subtask.  When a member has completed their work on their part, they should first document their part, come up with tests, and then code review the rest of the team's code/help them.  
+\newline
+\\Deadlines are set in accordance with the project deadlines. 
+\newline
+\\Tasks will be distributed by personal preference and will be influenced by experience in that area.  The person responsible for each task will be recorded in Google Docs.  
+\newline
+\\If one of our team members does not follow through with a commitment, we would like to know why.  If it was because of a time constraint, or because he/she did not know what was going on, the individual is expected to contact their team members and discuss their problems.  However, missing a deadline for no good reason is unacceptable. 
+\newline
+\\Team members will code review each other's parts to understand how their implementations work, think of more tests, and comment on sections that may need improvements or possibly have bad implementations.  
+\newline
+\\If there are differing opinions on the quality of work, the person who has a problem, can write or come up with tests to prove failure of the code.  If there is a problem with modularity or design of the code, this should be opened up to discussion with the team.  We do not anticipate too many design problems, as we intend to discuss design before implementation.  
+\newline
+\\If a team member isn't carrying their weight, we will try to discuss why that might be the case (i.e. Is it because of difficulty understanding the project, or time constraints?).  We will attempt to accommodate accordingly.  No team member shall be forcibly removed from the team.  
+\newline
+\\As long as the member gets their tasks done before the group set deadline, we will not worry about when they get their work done.  However, finishing early is preferable if possible.  
 \section{Decision Making}
 
 We need consensus to do anything major until we have something functional. After that, it is acceptable to work on pet projects after discussing them, but not in master. Changes should be carefully reviewed by at least one other member before they are merged.
