--- a/design/design_notes.tex
+++ b/design/design_notes.tex
@@ -1,4 +1,5 @@
-\documentstyle{amsart}
+\documentclass{amsart}
+\usepackage{graphicx}
 
 \begin{document}
 \author{ Catherine Zuo, Kimberly Toy,and Will Oursler}
@@ -7,6 +8,10 @@
 \maketitle
 
 This document contains rough design guidelines. These guidelines should be carefully fleshed out and discussed, both before coding, and during coding as problems become apparent.
+
+\section{ Dependency Graph }
+
+\includegraphics[width=\linewidth]{classes.png}
 
 \section{ The Fraction class }
 
@@ -21,6 +26,8 @@ This class is primarily concerned with the piece metadata, such as BPM, time, et
 \section{ The Measure class and Repeats }
 
 Each measure is a container of Note instances, each Note being associated with a start time ( represented by a Fraction ) relative the beginning of the measure. In this manner, the same Measure object can represent both of it's instantiations in a repeat. Measures are structured similarly to a linked list, but have an additional pointer to a second next element. If the Visitor has seen a specific measure before (measured by reference NOT value, as two different measures may contain the same musical content), it will take the second next measure rather than the first. This perhaps should be enabled with a careful Iterator pattern.
+
+\includegraphics[width=\linewidth]{measure_example.png}
 
 \section{ The Note class }
 A Note contains a pitch and a duration  ( represented by a Fraction ).  It does NOT contain any information that refers to a larger data structure. The key signature / implicit accidentals, for instance, are not relevant. They should be handled by the Parser.
