fixed latex syntax

--- a/design/design_notes.tex
+++ b/design/design_notes.tex
@@ -38,12 +38,12 @@ Rests are not notes, and in fact are not represented at all; they are redundant 
 
 Notes are immutable objects.  Its values are pitch, length, accidentals, octave, and it has getter methods to access these values.  
 
-\section( Lexer )
+\section{ Lexer }
 
-\section( Parser )
+\section{ Parser }
 
-\section( Visitor )
+\section{ Visitor }
 
-\section( Testing )
+\section{ Testing }
 
 \end{document}
