--- a/design/design_notes.tex
+++ b/design/design_notes.tex
@@ -29,6 +29,8 @@ Each measure is a container of Note instances, each Note being associated with a
 
 Measures are mutable objects and contain methods to changing the measure's pointers to other measures and adding or modifying what notes are in the method.  
 
+MeasureIterator is an Iterator which helps the Visitor accurately navigate through the 'linked list' of Measures.  
+
 \includegraphics[width=\linewidth]{measure_example.png}
 
 \section{ The Note class }
@@ -40,14 +42,21 @@ Notes are immutable objects.  Its values are pitch, length, accidentals, octave,
 
 \section{ Lexer }
 The Lexer class will separate the input into tokens.  For the header of the piece, it will create field header tokens, field value tokens, and newline tokens to show the separation between fields and the header and body.  
-For the body of the piece, it will create tokens for note pitches, which includes an upper or lowercase letter, accidental, or octave ticks, note length values, chords, tuples, rests, bar lines, and the symbols indicating that there are multiple voices.  It will also ignore whitespace.
+For the body of the piece, it will create tokens for note pitches, which includes an upper or lowercase letter, accidental, or octave ticks, note length values, chords, tuplets, rests, bar lines, and the symbols indicating that there are multiple voices.  It will also ignore whitespace and comments.
 The lexer will throw exceptions when it encounters invalid symbols or malformed tokens.  
 
 \section{ Parser }
-
+The parser will parse the header information tokens, specifically identifying key signature (using Circle of Fifths class), the tempo, and the time signature.  It will throw errors if there are invalid (or null) values for any of these fields.  This information will be passed into the Piece data type.  
+The parser will parse the body tokens into Measures, with methods to create note objects from single notes, tuples, chords, and rest Tokens.  From the key signature, the parser should keep track of current accidentals throughout a Measure, resetting when creating a new Measure.  The parser must link the next measure to the previous measure (e.g. the case of multiple endings).  In addition, it should keep track of different beat divisions, which will be used by the Visitor to determine a common tick/measure for the entire Piece.  Also, it should note if there are multiple voices and create separate 'linked lists' of Measures for each voice if so.  
+Some errors that parser will keep an eye out for: invalid measure durations (too long or too short), incorrect repeat braces, musically incorrect accidental stacking, invalid tuplets (length-wise), and invalid beat times (negatives, decimals, and the Fraction class should ensure there are no divide by 0s). 
 
 \section{ Visitor }
+The Visitor interfaces with the Piece class and the SequencePlayer.  It tracks global time as it goes through the Piece's linked list(s) of Measures, using MeasureIterator.  From the information about the different beat divisions it calculates the number of ticks/quarter note (using LCM of all beat divisions).  Thus, when it goes through a Measure and transcribes the notes to MIDI format, it correctly translates the note's local time to a global time.  When visiting measures, it will follow the measure's first pointer to another measure, if the measure has never been visited.  Otherwise, it will visit the second pointer.  (There is a possible bug here - in the case of nested repeats, it could possibly follow the first pointer in an infinite loop - a possible solution is using a stack of hash maps).  In addition, it should accurately handle multiple voices.  
 
 \section{ Testing }
+The modularity of our design allows that each major class can be tested.  We test that...
+... the Lexer can separate every kind of token, throws exception of invalid tokens, and correctly handles null input.
+... the Parser throws exceptions for all errors; correctly parses Measures with both basic notes and more complex tokens (chords, tuples); correctly creates nested repeat structures and multiple endings.  
+... the Visitor ensures global timekeeping is working and correctly translates to MIDI notes; correctly calculates a 'base' tick/quarter note from the different beat divisions; correctly traverses through repeats and alternate endings; and ensures that errors thrown in Lexer/Parser also stop its actions.   
 
 \end{document}
